# aux-cc7515-gpu

./: .gitignore  README.md
2019/aux1/: CMakeLists.txt
2019/aux1/src/: 11_main.cpp  14_tests.cpp
2019/aux2/ex/: ex_triangle.py
2019/aux3/my-shader/src/: main.css
2019/aux3/shader-fractal/src/shaderviewer/: viewer.js
2020/aux2/geom/: punto.h  punto_main.cpp
2020/aux2/src/: 11_complex_v2.h  12_complex_v3.h  Makefile
2020/aux3/: ejemplo cassert
2020/aux4/: __code__.cpp
2020/aux5/displacement-shader/: OnepixDebug.js  OnepixMaterials.js  OnepixMouseTracking.js  scene.html  scene.js
2020/aux5/displacement-shader/js/: Detector.js
2020/aux5/my-shader/: index.html
2020/aux5/my-shader/src/: shader.js
2020/aux5/shader-fractal/src/: app.js
2021/aux1/src/: 01_helloworld.cpp  03_if_else.cpp  09_complex_v1.cpp
2021/aux2-c++/src/: 04_while_for.cpp  07_pointer.cpp  10_complex_v1_sep.cpp
2021/aux3-suma-opencl/: main.cpp
2021/aux4-suma-cuda/: vectorAdd.cu
2021/aux4-suma-cuda/vectorAddOpenCL/: main.cpp
2022/aux2-cpp/codigos/src/: 02_variables.cpp  13_stack.h
aux1/: CMakeLists.txt  auxiliar 01.pptx
aux1/geom/: geom_main.cpp
aux1/src/: 03_if_else.cpp  05_functions.cpp  06_strings.cpp  07_pointer.cpp  08_reference.cpp  09_complex_v1.cpp  10_complex_v1_sep.cpp  10_complex_v1_sep.h  10_main.cpp  11_complex_v2.cpp  11_complex_v2.h  11_main.cpp  12_complex_v3.cpp  12_complex_v3.h  12_main.cpp  13_main.cpp  13_stack.h  14_tests.cpp
aux3/my-shader/: index.html
aux3/my-shader/src/: shader.js
aux3/shader-fractal/src/shaderviewer/: viewer.js
(+5 files in other folders)
